# direct-sqlcipher

./: .gitignore  direct-sqlcipher.cabal
cbits/: sqlite3.h  sqlite3ext.h
scripts/: make-sqlcipher.sh
