name:               direct-sqlcipher
version:            2.3.27
synopsis:           Low-level binding to SQLCipher. Includes UTF8 and BLOB support.
description:        This package is forked from direct-sqlite by Irene Knapp.
                    https://github.com/IreneKnapp/direct-sqlite
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) 2012 - 2014 Irene Knapp,
                    2014 - 2018 Janne Hellsten,
                    2018 - 2020 Sergey Bushnyak,
                    2022        Joshua Chia
                    2022        Evgeny Poberezkin
author:             Irene Knapp <irene.knapp@icloud.com>
maintainer:         Evgeny Poberezkin <ep@simplex.chat>
category:           Database
homepage:           https://github.com/simplex-chat/direct-sqlcipher
bug-reports:        https://github.com/simplex-chat/direct-sqlcipher/issues/new
build-type:         Simple
extra-source-files: cbits/sqlite3.c
                    cbits/sqlite3.h
                    cbits/sqlite3ext.h
                    changelog
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: git://github.com/simplex-chat/direct-sqlcipher.git

flag systemlib
  default:     False
  description: Use the system-wide sqlite library

flag fulltextsearch
  default:     True
  description: Enable full-text search when using the bundled sqlite library

flag urifilenames
  default:     True
  description: Enable URI filenames when using the bundled sqlite library

flag haveusleep
  default:     True
  description: Enable use of os function usleep.

flag json1
  default:     True
  description: Enable json1 extension.

flag commoncrypto
  description: SQLCipher: Enable encryption using Apple's commoncrypto
  default: False
  manual: True

flag openssl
  description: SQLCipher: Enable encryption using OpenSSL
  default: False
  manual: True

flag tomcrypt
  description: SQLCipher: Enable encryption using tomcrypt
  default: False
  manual: True

library
  exposed-modules:  Database.SQLite3
                    Database.SQLite3.Bindings
                    Database.SQLite3.Bindings.Types
                    Database.SQLite3.Direct
  build-depends:    base       >= 4.11 && < 5
                  , bytestring >= 0.9.2.1
                  , text       >= 0.11
  default-language: Haskell2010
  include-dirs:     .
  ghc-options:      -Wall -fwarn-tabs

  if flag(systemlib)
    extra-libraries: sqlite3
    cpp-options:     -Ddirect_sqlite_systemlib
  else
    c-sources:        cbits/sqlite3.c
    install-includes: sqlite3.h, sqlite3ext.h
    include-dirs:     cbits
    cc-options: -DSQLITE_TEMP_STORE=2
                -DSQLITE_HAS_CODEC

    if !os(windows) && !os(android)
      extra-libraries: pthread

    if flag(fulltextsearch)
      cc-options: -DSQLITE_ENABLE_FTS3 -DSQLITE_ENABLE_FTS3_PARENTHESIS
                  -DSQLITE_ENABLE_FTS4 -DSQLITE_ENABLE_FTS5

    if flag(urifilenames)
      cc-options: -DSQLITE_USE_URI

    if flag(haveusleep)
      cc-options: -DHAVE_USLEEP

    if flag(json1)
      cc-options: -DSQLITE_ENABLE_JSON1

    if flag(commoncrypto)
      cc-options: -DSQLCIPHER_CRYPTO_CC
      frameworks: Security
                  CoreFoundation

    if flag(openssl)
      cc-options: -DSQLCIPHER_CRYPTO_OPENSSL
      extra-libraries: crypto

    if flag(tomcrypt)
      cc-options: -DSQLCIPHER_CRYPTO_LIBTOMCRYPT
      extra-libraries: tomcrypt

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      StrictEq
  hs-source-dirs:     test
  build-depends:      base
                    , HUnit
                    , base16-bytestring
                    , bytestring
                    , direct-sqlcipher
                    , directory
                    , temporary
                    , text
  default-language:   Haskell2010
  default-extensions: Rank2Types
                      ScopedTypeVariables
                      NamedFieldPuns
                      RecordWildCards
                      OverloadedStrings
                      DeriveDataTypeable
  ghc-options:        -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind
